--- a/lexicalAnalyzerC#/nbproject/project.properties
+++ b/lexicalAnalyzerC#/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/lexicalAnalyzerC_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-cup-11a.jar=lib\\java-cup-11a.jar
 file.reference.jflex-1.6.1.jar=C:\\Users\\Oscar\\Google Drive\\Quinto Ciclo\\Lenguajes formales y aut\u00f3matas\\Proyectos\\lexicalAnalyzer_1194216\\lexicalAnalyzerPHP\\jFlex lib\\jflex-1.6.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jflex-1.6.1.jar}
+    ${file.reference.jflex-1.6.1.jar}:\
+    ${file.reference.java-cup-11a.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
